<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="by.vshkl.bashq.QuotesActivity"
    >

    <item
        android:id="@+id/action_share_comic"
        android:orderInCategory="100"
        android:title="@string/action_comic_share"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_share_pic"
        android:orderInCategory="200"
        android:title="@string/action_comic_share_pic"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_download_pic"
        android:orderInCategory="300"
        android:title="@string/action_comic_download_pic"
        app:showAsAction="never"
        />

</menu>